@@ -59,8 +59,10 @@ ICNView::ICNView( ICNDocument *icnDocument, ViewContainer *viewContainer, uint v
 	QMenu * m = m_pRoutingModeToolbarPopup->menu();
 	m->setTitle( i18n("Connection Routing Mode") );
 	
-	m->insertItem( /*KIconLoader::global()->loadIcon( "routing_mode_auto",	KIconLoader::Small ), */i18n("Automatic"), 0 );
-	m->insertItem( /*KIconLoader::global()->loadIcon( "routing_mode_manual",	KIconLoader::Small ),*/ i18n("Manual"), 1 );
+	m->insertItem( /*KIconLoader::global()->loadIcon(
+        "routing_mode_auto",	KIconLoader::Small ), */i18n("Automatic"), 0 );
+	m->insertItem( /*KIconLoader::global()->loadIcon(
+        "routing_mode_manual",	KIconLoader::Small ),*/ i18n("Manual"), 1 );
 	
 	m->setCheckable(true);
 	m->setItemChecked( manualRouting ? 1 : 0, true );
